2009-01-07  David Engster  <dengste@eml.cc>

	* gnus-msg.el (gnus-inews-do-gcc): Fix last patch to deal with
	simplified server definitions by converting it via g-server-to-method.

2009-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-set-local-parameters): Always evaluate
	parameter's operands.

2009-01-06  David Engster  <dengste@eml.cc>

	* gnus-msg.el (gnus-inews-do-gcc): Reduce to short group name when on
	primary select method (for gnus-group-mark-article-as-read).

2009-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-ucs-to-char): New function.

	* mm-url.el (mm-url-decode-entities): Use it.

	* lpath.el: Fbind decode-char, int-to-char, ucs-to-char and
	unicode-to-char.

2009-01-05  Dave Love  <fx@gnu.org>

	* time-date.el: Require cl for `declare'.

2009-01-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* time-date.el (format-seconds): Explain `assoc-string'.  Suggested by
	Dave Love.

2009-01-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-fix-before-sending): Add `eight-bit' to
	illegible-text check.

2009-01-01  Dave Love  <fx@gnu.org>

	* imap.el (imap-string-to-integer): Fix typo.
	(imap-fetch-safe): New function.
	(imap-message-copyuid-1, imap-message-appenduid-1): Use it.

	* nnimap.el (nnimap-find-minmax-uid): Use imap-fetch-safe.

	* imap.el (imap-process-connection-type, imap-debug, imap-open):
	(imap-parse-greeting): Fix doc strings.
	(imap-tls-open, imap-search, imap-message-appenduid-1): Add FIXMEs.
	(imap-parse-flag-list): Make messages unique.
	(imap-parse-body): Fix comments.  Add comment on Exchange 2007.

	* nnimap.el: Fix author email.
	(nnimap-split-rule): Add FIXME comment.
	(nnimap-debug): Fix doc string.

2008-12-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* dns.el (dns-set-servers): Check "Address".  Fix typo.

2008-12-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* dns.el (dns-set-servers): Renamed from dns-parse-resolv-conf.  Call
	nslookup if resolv.conf isn't available.